# notraffic_app

./: .gitignore  README.md  docker-compose.debug.yml  docker-compose.yml  package-lock.json
back/: .dockerignore  .env.sample  .flake8  .gitignore  pyproject.toml
back/api/v1/: urls.py
back/api/v1/notraffic/: serializers.py  views.py
back/common/: viewset.py
back/config/: settings.py
back/notraffic/: apps.py  models.py
back/notraffic/migrations/: 0001_initial.py
back/notraffic/services/: intersection_service.py
back/tests/api/v1/notraffic/: test_views.py
front/: Dockerfile  package-lock.json  package.json
front/src/: App.tsx
front/src/Pages/: Main.tsx
front/src/components/ErrorModal/: index.tsx
front/src/components/Modal/: index.tsx
front/src/components/Table/: index.tsx
front/src/components/Table/Buttons/: index.tsx
front/src/store/: errorHandler.ts  index.ts  types.ts
